feat: add Keycloak cookie authentication
